syntax = "proto3";

message GetShopPagesData {
    string category = 1;
}
